# apps/web-last-admin-antd/swagger.json
@@ -785,6 +785,225 @@
         }
       }
     },
+    "/configuration/createOrUpdate": {
+      "post": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["配置"],
+        "summary": "新增/更新配置",
+        "operationId": "configurationCreateOrUpdateConfigurationHandler",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": ["key", "value", "name", "group"],
+              "properties": {
+                "description": {
+                  "description": "配置描述 / Configuration description",
+                  "type": "string"
+                },
+                "group": {
+                  "description": "配置分组 / Configuration group",
+                  "type": "string"
+                },
+                "key": {
+                  "description": "配置键 / Configuration key",
+                  "type": "string"
+                },
+                "name": {
+                  "description": "配置名称 / Configuration name",
+                  "type": "string"
+                },
+                "value": {
+                  "description": "配置值 / Configuration value",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "description": {
+                  "description": "配置描述 / Configuration description",
+                  "type": "string"
+                },
+                "group": {
+                  "description": "配置分组 / Configuration group",
+                  "type": "string"
+                },
+                "key": {
+                  "description": "配置键 / Configuration key",
+                  "type": "string"
+                },
+                "name": {
+                  "description": "配置名称 / Configuration name",
+                  "type": "string"
+                },
+                "value": {
+                  "description": "配置值 / Configuration value",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/configuration/delete": {
+      "post": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["配置"],
+        "summary": "删除配置",
+        "operationId": "configurationDeleteConfigurationHandler",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": ["key"],
+              "properties": {
+                "key": {
+                  "description": "配置键 / Configuration key",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/configuration/list": {
+      "post": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["配置"],
+        "summary": "获取配置列表",
+        "operationId": "configurationListConfigurationHandler",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": ["page"],
+              "properties": {
+                "group": {
+                  "description": "配置分组 / Configuration group",
+                  "type": "string"
+                },
+                "key": {
+                  "description": "配置键 / Configuration key",
+                  "type": "string"
+                },
+                "name": {
+                  "description": "配置名称 / Configuration name",
+                  "type": "string"
+                },
+                "page": {
+                  "type": "object",
+                  "required": ["pageSize", "currentPage"],
+                  "properties": {
+                    "currentPage": {
+                      "type": "integer"
+                    },
+                    "pageSize": {
+                      "type": "integer"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "data": {
+                  "description": "配置列表 / Configuration list",
+                  "type": "object",
+                  "required": ["total", "list", "list"],
+                  "properties": {
+                    "list": {
+                      "description": "配置列表 / Configuration list",
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "required": ["key", "value", "name", "group"],
+                        "properties": {
+                          "description": {
+                            "description": "配置描述 / Configuration description",
+                            "type": "string"
+                          },
+                          "group": {
+                            "description": "配置分组 / Configuration group",
+                            "type": "string"
+                          },
+                          "key": {
+                            "description": "配置键 / Configuration key",
+                            "type": "string"
+                          },
+                          "name": {
+                            "description": "配置名称 / Configuration name",
+                            "type": "string"
+                          },
+                          "value": {
+                            "description": "配置值 / Configuration value",
+                            "type": "string"
+                          }
+                        }
+                      }
+                    },
+                    "total": {
+                      "type": "integer"
+                    }
+                  }
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/department/createOrUpdate": {
       "post": {
         "consumes": ["application/json"],
@@ -3477,6 +3696,63 @@
         }
       }
     },
+    "/role/assign/configurationGroup": {
+      "post": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["角色"],
+        "summary": "为角色分配配置项分组权限",
+        "operationId": "roleAssignConfigurationGroupToRoleHandler",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": ["roleValue", "configurationGroups"],
+              "properties": {
+                "configurationGroups": {
+                  "description": "配置项分组 / Configuration groups",
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "roleValue": {
+                  "description": "角色值 / Role value",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "data": {
+                  "description": "配置项分组列表 / Configuration group list",
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/role/assign/menu": {
       "post": {
         "consumes": ["application/json"],
@@ -3706,6 +3982,87 @@
                 },
                 "data": {
                   "description": "API列表 / API list",
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/role/get/configurationGroup": {
+      "post": {
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["角色"],
+        "summary": "获取角色配置项分组权限",
+        "operationId": "roleGetRoleConfigurationGroupHandler",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": ["id"],
+              "properties": {
+                "id": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "data": {
+                  "description": "配置项分组列表 / Configuration group list",
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/role/get/configurationGroupList": {
+      "get": {
+        "produces": ["application/json"],
+        "schemes": ["https"],
+        "tags": ["角色"],
+        "summary": "获取当前系统中的所有分组列表",
+        "operationId": "roleGetConfigurationGroupListHandler",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "integer"
+                },
+                "data": {
+                  "description": "配置项分组列表 / Configuration group list",
                   "type": "array",
                   "items": {
                     "type": "string"
@@ -5364,7 +5721,7 @@
       }
     }
   },
-  "x-date": "2025-11-11 04:07:45",
+  "x-date": "2025-11-13 16:13:15",
   "x-description": "This is a goctl generated swagger file.",
   "x-github": "https://github.com/zeromicro/go-zero",
   "x-go-zero-doc": "https://go-zero.dev/",
